Spring Boot version upgrade 	- Update Spring Boot dependency to latest release version of 3.x 	- Update JDK version required to build to 17   - Update JMS imports from javax.jms to jakarta.jms